--- a/SRIP/Codes/exp1-code2/css/exp1.css
+++ b/SRIP/Codes/exp1-code2/css/exp1.css
@@ -1,8 +1,8 @@
 <style>
-        body {
+     body {
         color: mediumblue;
 }
-       #xabox {
+ #xabox {
   width: 150px;
   height: 60px;
   background: linear-gradient(darkred, brown);
@@ -18,7 +18,7 @@
             left: 635px;
             top: 222px;
 }
-        #xcbox {
+#xcbox {
   width: 40px;
   height: 140px;
   background: linear-gradient(to left, grey 0%, lightgrey 100%);
@@ -26,7 +26,7 @@
             left: 668px;
             top: 260px;
 }
-        #yabox {
+    #yabox {
   width: 150px;
   height: 60px;
   background: linear-gradient(brown, darkred);
@@ -50,37 +50,16 @@
             left: 668px;
             top: 300px;
 }
-        
-        @keyframes up {
-  from {
-    transform: translateY(-50px);
+     button {
+  margin-top: 1px;
+  margin-bottom: 1px;
+  margin-left: 415px;
+  margin-right: 0px;
+  background-color: black;
+  color: white;
+            position: absolute;
+            left: 400px;
+            top: 50px;
   }
-
-  to {
-    transform: translateY(-108px);
-  }
-}
-        @keyframes down {
-  from {
-    transform: translateY(-50px);
-  }
-
-  to {
-    transform: translateY(8px);
-  }
-}
-
-#x {
-  animation-duration: 13s;
-  animation-name: up;
-  animation-iteration-count: 1;
-  animation-direction: alternate;
-}
-        #y {
-  animation-duration: 13s;
-  animation-name: down;
-  animation-iteration-count: 1;
-  animation-direction: alternate;
-}
-        
-    </style>
+ 
+</style>
